--- a/fly.toml
+++ b/fly.toml
@@ -1,23 +1,23 @@
-# fly.toml app configuration file generated for gifspin on 2025-02-14T21:15:08Z
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
-
 app = 'gifspin'
 primary_region = 'sea'
-
-[build]
-
-[http_service]
-  internal_port = 8080
-  force_https = true
-  auto_stop_machines = 'stop'
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
 
 [[vm]]
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 1024
+
+[build]
+
+[env]
+  LISTEN = ':3000'
+  PATH_TEMP = '/tmp'
+  OPT_DISPATCH_SIZE = '1'
+  OPT_SHUTDOWN_MS = '20000'
+  OPT_TIMEOUT_MS = '15000'
+
+[http_service]
+  internal_port = 3000
+  force_https = true
+  auto_stop_machines = 'stop'
+  auto_start_machines = true
+  min_machines_running = 0
